2008-01-25  Alexander Barth  <barth.alexander@gmail.com>

	* general/interpn.m: Compatibility fix. Don't ndgrid vector
	abscissa.
	
2008-01-25  David Bateman  <dbateman@free.fr>

	* general/__splinen__.m: Treat mixed orientation vectors.
	* plot/__scatter__.m: Remove NaN values from data.
	* plot/__patch__.m: Vectorize treatment of trailing NaN values.

2008-01-25  Thomas Weber  <thomas.weber.mail@gmail.com>

	* linear-algebra/trace.m: Test cases for non 2-d args.

2008-01-25  James Packer  <james.packer@wadh.ox.ac.uk>

	* geometry/griddata3.m: Call griddata, not gridata.

2008-01-24  Schloegl Alois  <alois.schloegl@tugraz.at>

	* linear-algebra/trace.m: Require 2-d args.  Handle vectors properly.

2008-01-22  Thomas Weber  <thomas.weber.mail@gmail.com>

	* linear-algebra/cond.m, linear-algebra/trace.m:
	Move tests here from test/test_linalg.m.
	
	* general/diff.m, general/fliplr.m, general/flipud.m,
	general/logspace.m, general/rot90.m, general/shift.m, general/tril.m,
	general/triu.m, linear-algebra/vec.m, linear-algebra/vech.m,
	special-matrix/hankel.m, special-matrix/hilb.m,
	special-matrix/invhilb.m, special-matrix/sylvester_matrix.m,
	special-matrix/toeplitz.m, special-matrix/vander.m:
	Move tests here from test/test_matrix.m.
	
	* general/isscalar.m, general/issquare.m, general/isvector.m:
	Move tests here from test/test_number.m.
	
	* deprecated/polyinteg.m, polynomial/compan.m, polynomial/conv.m,
	polynomial/deconv.m, polynomial/poly.m, polynomial/polyderiv.m,
	polynomial/polyfit.m, polynomial/polyreduce.m, polynomial/polyval.m,
	polynomial/polyvalm.m, polynomial/roots.m:
	Move tests here from test/test_poly.m.

	* signal/unwrap.m:
	Move tests here from test/test_signal.m.

	* statistics/base/corrcoef.m, statistics/base/cov.m,
	statistics/base/kurtosis.m, statistics/base/mahalanobis.m,
	statistics/base/mean.m, statistics/base/median.m,
	statistics/base/skewness.m, statistics/base/std.m:
	Move tests here from test/test_stats.m.
