@@ -49,7 +49,7 @@ function retval = xlabel (varargin)
   end_unwind_protect
 
   if (nargout > 0)
-    retval = h;
+    retval = tmp;
   endif
 
 endfunction
