@@ -1,3 +1,8 @@
+2008-01-28  Michael Goffioul <michael.goffioul@gmail.com>
+
+	* plot/xlabel.m, plot/ylabel.m, plot/zlabel.m:
+	Return the label handle, not the current axis handle.
+
 2008-01-25  Alexander Barth  <barth.alexander@gmail.com>
 
 	* general/interpn.m: Compatibility fix. Don't ndgrid vector
